# openaiApi_training

./: Generative_AI_Course.ipynb  README.md
.github/workflows/: unit-tests.yml
testqt/.github/: copilot-instructions.md
testqt/cpp_recall/: CMakeLists.txt  general.cpp  main.cpp  myshared_ptr.h  myshared_ptr_test.cpp  myunique_ptr.h  myunique_ptr_test.cpp  shared_ptr_test.cpp  tests.cmake  unique_ptr_test.cpp  weak_ptr_test.cpp
testqt/cpp_recall/.github/workflows/: unit-tests.yml
